# pyNanoMatBuilder

./: .LargeFiles  .gitignore  .gitignore.bak  .gitignore.swp  .gitignore_base  BacASable.ipynb  CITATION.cff  CLAUDE.md  ChangeLog.md  DemoUtilsDC.ipynb  Garbage.ipynb  MANIFEST.in  MakeNPsDatabase.ipynb  Marianne_bipyramid.ipynb  Miller-Indices-Visualizer.ipynb  Nicolas.ipynb  Pentagonal pyramid with 13 atoms per edge on the pentagonal cap, 3 layer(s) in the elongated part, a Marks truncation by 4 atom(s) and Rnn = 2.769_cnp.script  README.md  SandBox-doNotDelete-dev.ipynb  Untitled.ipynb  Wires-4KickOffBiMan.ipynb  Wires.ipynb  cif_to_xyz.ipynb  git_push  prof.out  push_pyPi.sh  pyNMB-Article.ipynb  pyNMB-GraphAbs.ipynb  pyNMB-examples-sanspbcolonnes.ipynb  pyNMB-examples.ipynb  pyNMB-tutorials.ipynb  pyNanoMatBuilder-SaraVersion-20250311beforeSynchroWithRP.tar  pyNanoMatBuilder.ipynb  pyproject.toml  size_test_MOI_real.ipynb  test_MOI_predefinedWulff.ipynb  tmp.spt
.ipynb_checkpoints/: 3DNPs-checkpoint.ipynb  BacASable-checkpoint.ipynb  ChangeLog-checkpoint.md  DemoUtilsDC-checkpoint.ipynb  Garbage-checkpoint.ipynb  Miller-Indices-Visualizer-checkpoint.ipynb  README-checkpoint.md  SandBox-doNotDelete-dev-checkpoint.ipynb  Untitled-checkpoint.ipynb  pyNMB-examples-checkpoint.ipynb  pyNMB-examples-sanspbcolonnes-checkpoint.ipynb  pyNanoMatBuilder-checkpoint.ipynb  pyPolyhedra-checkpoint.ipynb  size_test_MOI_real-checkpoint.ipynb
.virtual_documents/: DemoUtilsDC.ipynb  Wires-4KickOffBiMan.ipynb  Wires.ipynb  pyNMB-examples.ipynb
Create_database/: Create_archimedean_database.ipynb  Create_catalan_database.ipynb  Create_crystals_database.ipynb  Create_johnson_database.ipynb  Create_otherNPs_database.ipynb  Create_platonic_database.ipynb  Data_csv.ipynb
Debye/: Ag_Icosahedron_4shells.xyz  Debye.ipynb  Decahedron_6_1_0.xyz  FitPDF.py  Iofq_diffpy.py  Iofq_f_complex_nodiffpy_py311.py  Iofq_fcomplex_ok.py  Readme.md  Zn3P2.xyz  pentarod_Marianne_Dplus.ipynb  pentarod_crysol.py  pyNMB_DebyeCalc.py  test_pyNMB.py
Graphic_User_Interface/: INSTALLATION TEMPORAIRE PyNanoMatBuilder.md  Info version PyNanoMatBuilderViewer.txt  MaNanoParticule.xyz  debye_thread.py  fit2.ui  html_script_jsmol.py  interface23.ui  interface23_ui.py  interface27.ui  nanostructure_scatter_tools.py  pynanomatbuilder_main23.py  pynanomatbuilder_main27_ok.py  testHtml6ok.ipynb  window_fit2.py  window_fit25ok.py  window_wyz_creator.py  xyz_creator.ui
HRTEM/: HRTEM_class.ipynb  HRTEM_param.ipynb
MOI_tests/: approxMOI_predefinedWulff.ipynb  size_test_MOI_real.ipynb
NoteBooks-tests/: cylinder.ipynb  cylinder2.ipynb
OldFortranPolyhedra-4devOnly/: 1RTD.xyz  2RTD.xyz  MarksDecahedron.xyz  Oh2.xyz  Oh3.xyz  bccrdd1.xyz  bccrdd3_CS.xyz  bccrdd4.xyz  doublon.xyz  fccBeforeSclicing.xyz  initial.xyz  last.xyz  pentagonal_pyramid.xyz  pentagonal_pyramid4.xyz  polyhedra.in  polyhedra.xyz  sliced.xyz
animations/: Febcc_c_rdd_00.xyz  Febcc_c_rdd_01.xyz  Febcc_c_rdd_02.xyz  Febcc_c_rdd_03.xyz  (+12 more)
(+2187 files in other folders)
